2ndUpdate index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
   <h2>Example git</h2>  
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptatem facere pariatur dolore placeat alias ab et tempora harum, perspiciatis quas aut. Impedit sed autem quae voluptas voluptatum ipsam possimus!
+
+<h3>2ndtime</h3>
+    from github
 </body>
 </html>
